# simple-fast

./: LICENSE  README.md  setup.cfg
app/: webapp.py
app/static/css/: main.css
app/templates/: home.html
