[metadata]
name = sample-fast
version = 0.0.1

[options]
packages = find:
install_requires =
    anyio==3.5.0
    asgiref==3.5.0
    build==0.7.0
    click==8.0.4
    fastapi==0.75.0
    h11==0.13.0
    httptools==0.4.0
    idna==3.3
    packaging==21.3
    pep517==0.12.0
    pydantic==1.9.0
    pyparsing==3.0.7
    python-dotenv==0.19.2
    PyYAML==6.0
    sniffio==1.2.0
    starlette==0.17.1
    tomli==2.0.1
    typing_extensions==4.1.1
    uvicorn==0.17.6
    uvloop==0.16.0
    watchgod==0.8
    websockets==10.2
